# inclinometr

./: .gitmodules  CMakeLists.txt  sdkconfig
components/WifiStack/: wifiStack.h
inclinometr/: .cproject  .project  sdkconfig  sdkconfig.old
inclinometr/components/WifiStack/: CMakeLists.txt  wifiStack.c
inclinometr/main/: CMakeLists.txt  main.c
inclinometr/main/include/: ble.hpp  ble_server.h  connection.hpp  display.h  display_helper.h  display_ui.h  pin_config.h  ws_server.h
inclinometr/main/src/: display.c  display_helper.c  display_ui.c  i2c.cpp  main.c  main.cpp  ws_server.c  ws_server.cpp
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
main/include/: i2c.hpp  wifi.hpp  ws_server.hpp
main/src/: ble.cpp  connection.cpp  wifi.cpp
